--- a/css/style.css
+++ b/css/style.css
@@ -3826,6 +3826,11 @@ address p {
 
 .home-banner {
     background-image: url("../img/banner/home-banner1.jpg")!important;
+    width: 100% !important;
+    height: auto !important;
+    max-width: 100% !important;
+    background-repeat: no-repeat !important;
+    background-size: 100% 100% !important;
 }
 
 .creative-banner {
